force-app/main/default/objects/My_Franchise__c/My_Franchise__c.object-meta.xml
<CustomObject>
    <label>My Franchise</label>
    <nameField>
        <label>My Franchise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Franchises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>