force-app/main/default/objects/My_Franchise__c/fields/My_Agenda__c.field-meta.xml
<CustomField>
    <fullName>My_Agenda__c</fullName>
    <label>My Agenda</label>
    <length>10</length>
    <type>Text</type>
</CustomField>