force-app/main/default/objects/My_Franchise__c/fields/My_Rule__c.field-meta.xml
<CustomField>
    <fullName>My_Rule__c</fullName>
    <label>My Rule</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>