force-app/main/default/objects/My_Franchise__c/fields/Our_Interior__c.field-meta.xml
<CustomField>
    <fullName>Our_Interior__c</fullName>
    <label>Our Interior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>