force-app/main/default/objects/My_Franchise__c/fields/Our_Taste__c.field-meta.xml
<CustomField>
    <fullName>Our_Taste__c</fullName>
    <label>Our Taste</label>
    <length>10</length>
    <type>Text</type>
</CustomField>