force-app/main/default/objects/My_Franchise__c/fields/Tea_Taste__c.field-meta.xml
<CustomField>
    <fullName>Tea_Taste__c</fullName>
    <label>Tea Taste</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>