force-app/main/default/objects/My_Franchise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tea_Taste__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>